[gd_scene load_steps=9 format=4 uid="uid://fnxcbbueeibb"]

[ext_resource type="Script" uid="uid://h2chu0rrspc1" path="res://hardcover_book.gd" id="1_67fns"]
[ext_resource type="Script" uid="uid://cg3fsmle8m3h8" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand.gd" id="2_jho0q"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qlp7o"]
resource_name = "Binder_Texture"
cull_mode = 2
albedo_color = Color(0.906643, 0.368559, 0.34585, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c7266"]
resource_name = "Page_Texture"
cull_mode = 2
albedo_color = Color(0.906438, 0.77179, 0.6466, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_gtitk"]
_surfaces = [{
"aabb": AABB(-0.1, 0, -0.15, 0.21, 0.05, 0.3),
"format": 34359742465,
"index_count": 114,
"index_data": PackedByteArray("AAABAAIAAwACAAEABAACAAMABAAAAAIAAwABAAUABgAAAAQABQABAAcAAAAHAAEABQAHAAgABgAJAAAACgAJAAYACAAHAAsACAALAAwAAAANAAcADAALAA4ADAAOAA8ADwAQAAoADwAOABAACgAQAAkAEAAOAAsAEAALAAkACQARAAAAAAARAA0ACwASAAkACQASABEABwATAAsABwANABMACwATABIAEgAUABEADQAVABMAEwAWABIAEgAWABQAEwAVABYAEQAUABcAEQAXAA0AFgAXABQADQAXABUAFgAVABcA"),
"name": "Binder_Texture",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("0MzMPcDMTD2YmRm+0MzMvcDMTD2YmRk+0MzMvcDMTD2YmRm+X4/CvU+PQj3gehS+GK7HPU+PQj3gehS+X4/CvU+PQj3gehQ+GK7HPQnXIzvgehS+0MzMPcDMTD2YmRk+GK7HPU+PQj3gehQ+0MzMPQAAAACYmRm+X4/CvQrXIzvgehS+0MzMPQAAAACYmRk+GK7HPQnXIzvgehQ+QQrXPU+PQj2YmRk+0MzMvQAAAACYmRk+X4/CvQrXIzvgehQ+0MzMvQAAAACYmRm+QQrXPU+PQj2YmRm+QQrXPQrXIzuYmRm+QQrXPQrXIzuYmRk+skfhPcDMTD2YmRm+skfhPQAAAACYmRk+skfhPQAAAACYmRm+skfhPcDMTD2YmRk+")
}, {
"aabb": AABB(-0.095, 0.0025, -0.145, 0.1925, 0.0449999, 0.29),
"format": 34896613377,
"index_count": 18,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAwACAAQAAAAFAAEABQAGAAEABQAHAAYA"),
"name": "Page_Texture",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAA//8AAP//AAD///////8AAAAAAAAAAAAA/////wAAAAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_vdvv5"]
resource_name = "hardcover_book_Cube_001"
_surfaces = [{
"aabb": AABB(-0.1, 0, -0.15, 0.21, 0.05, 0.3),
"attribute_data": PackedByteArray("AADAPgAAgD8AACA/AABAPwAAID8AAIA/AADAPgAAQD8AAGA/AACAPgAAYD8AAAA/AABgPwAAAD8AAGA/AACAPgAAID8AAAA/AABgPwAAgD4AAGA/AAAAPwAAID8AAIA+AABgPwAAgD4AAGA/AAAAPwAAYD8AAAA/AABgPwAAgD4AAMA+AACAPwAAwD4AAEA/AADAPgAAQD8AAMA+AACAPwAAID8AAIA+AADAPgAAgD4AAMA+AACAPgAAID8AAIA+AADAPgAAgD4AACA/AACAPgAAAD4AAIA+AADAPgAAgD4AAMA+AACAPgAAAD4AAIA+AADAPgAAgD4AAAA+AACAPgAAwD4AAEA/AAAgPwAAAD8AACA/AABAPwAAwD4AAAA/AADAPgAAgD8AAMA+AABAPwAAwD4AAEA/AADAPgAAgD9nZsY+AAAAPwAAwD4AAIA+ZmbGPgAAgD4AAMA+AAAAP8zMHD/8/38+AAAgPwAAAD/NzBw/AAAAPwAAID8AAIA+zMwcPwAAAAAAACA/AACAPszMHD/MzHw+AAAgPwAAAABoZsY+zMx8PgAAwD4AAAAAaGbGPgAAAAAAAMA+AACAPs3MDD4AAAA/AAAAPgAAgD7OzAw+mJmBPgAAAD4AAAA/zswMPpiZgT4AAMA+AACAPpmZuT6amYE+AAAAPgAAgD6Zmbk+mpmBPgAAwD4AAAA/mZm5PgAAAD8AAMA+AACAPszMHD/MzHw+AADAPgAAgD5oZsY+zMx8PgAAID8AAIA+"),
"format": 34359742487,
"index_count": 114,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUAFwAYABUAFwAZABgAGgAbABwAGgAdABsAHQAeABsAHQAfAB4AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUA"),
"material": SubResource("StandardMaterial3D_qlp7o"),
"name": "Binder_Texture",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 72,
"vertex_data": PackedByteArray("0MzMPcDMTD2YmRm+0MzMvcDMTD2YmRk+0MzMvcDMTD2YmRm+0MzMPcDMTD2YmRk+0MzMPQAAAACYmRk+QQrXPQrXIzuYmRm+0MzMPQAAAACYmRm+QQrXPQrXIzuYmRk+0MzMvQAAAACYmRm+0MzMPQAAAACYmRk+0MzMPQAAAACYmRm+0MzMvQAAAACYmRk+QQrXPQrXIzuYmRk+skfhPQAAAACYmRm+QQrXPQrXIzuYmRm+skfhPQAAAACYmRk+0MzMPcDMTD2YmRm+QQrXPU+PQj2YmRk+0MzMPcDMTD2YmRk+QQrXPU+PQj2YmRm+0MzMPcDMTD2YmRk+QQrXPQrXIzuYmRk+0MzMPQAAAACYmRk+QQrXPU+PQj2YmRk+skfhPQAAAACYmRk+skfhPcDMTD2YmRk+0MzMPQAAAACYmRm+QQrXPU+PQj2YmRm+0MzMPcDMTD2YmRm+QQrXPQrXIzuYmRm+skfhPcDMTD2YmRm+skfhPQAAAACYmRm+skfhPQAAAACYmRm+skfhPcDMTD2YmRk+skfhPcDMTD2YmRm+skfhPQAAAACYmRk+QQrXPU+PQj2YmRm+skfhPcDMTD2YmRk+QQrXPU+PQj2YmRk+skfhPcDMTD2YmRm+X4/CvQrXIzvgehQ+0MzMvQAAAACYmRm+X4/CvQrXIzvgehS+0MzMvQAAAACYmRk+X4/CvU+PQj3gehS+0MzMvcDMTD2YmRk+X4/CvU+PQj3gehQ+0MzMvcDMTD2YmRm+X4/CvU+PQj3gehQ+0MzMPcDMTD2YmRk+GK7HPU+PQj3gehQ+0MzMvcDMTD2YmRk+GK7HPQnXIzvgehQ+0MzMvQAAAACYmRk+X4/CvQrXIzvgehQ+0MzMPQAAAACYmRk+X4/CvQrXIzvgehS+0MzMPQAAAACYmRm+GK7HPQnXIzvgehS+0MzMvQAAAACYmRm+GK7HPQnXIzvgehS+0MzMPcDMTD2YmRm+GK7HPU+PQj3gehS+0MzMPQAAAACYmRm+GK7HPU+PQj3gehS+0MzMvcDMTD2YmRm+X4/CvU+PQj3gehS+0MzMPcDMTD2YmRm+GK7HPU+PQj3gehQ+0MzMPQAAAACYmRk+GK7HPQnXIzvgehQ+0MzMPcDMTD2YmRk+/3///wAA/7//f///AAD/v/9///8AAP+//3///wAA/7+qqqoq////P6qqqir///8/qqqqKv///z+qqqoq////P/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/VFWqKv///z9UVaoq////P1RVqir///8/VFWqKv///z+qqlTV////P6qqVNX///8/qqpU1f///z+qqlTV////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/////////8//////////z//////////P/////////8//////////z//////////P////3//f///////f/9///////9//3///////3//f///VFVU1f///z9UVVTV////P1RVVNX///8/VFVU1f///z9UVVTVZuZl5lRVVNUys8vMVFVU1Ymz4cxUVVTV7OXt5VRVqiqYGWXmVFWqKsxMy8xUVaoqdUzhzFRVqioSGu3l/3+qKsxMy8z/f6oq/39U1f9/qioZfy7V/3+qKjJOB83/f1TVodWL//9/VNXu5Rjn/39U1WbmZeb/f1TVVNX//6mq//8ys8vMqar///9/VNWpqv//5YAu1amq///MsQfNAACpqv9///8AAKmq/3///wAAqar/f///AACpqv9///+pqgAAXSqL/6mqAAAQGhjnqaoAAJgZZeapqgAAVNX//6oq/3//f///qir/f/9///+qKv9//3///6oq/3//f///")
}, {
"aabb": AABB(-0.095, 0.0025, -0.145, 0.1925, 0.0449999, 0.29),
"attribute_data": PackedByteArray("MmP/f8yc/z/MnP9/MmP/PzJjMj/MnAAAzJwyPzJjAAAzI/9/zFzMQMxc/38zI8xA"),
"format": 34896613399,
"index_count": 18,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkA"),
"material": SubResource("StandardMaterial3D_c7266"),
"name": "Page_Texture",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNX//wAA////vwAA//////+//////////78AAAAA////vwAAAAAAAP///////wAA//8AAP//AAD/////AAAAAP//VNVU1VTVVNVU1VTVVNVU1f//////////////////////v/+//7//v/+//7//v/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_gtitk")

[sub_resource type="PlaneMesh" id="PlaneMesh_jho0q"]
size = Vector2(0.55, 0.75)

[sub_resource type="BoxShape3D" id="BoxShape3D_jho0q"]
margin = 0.1
size = Vector3(0.21, 0.05, 0.3)

[node name="hardcover_book" type="RigidBody3D"]
collision_layer = 4
collision_mask = 196615
script = ExtResource("1_67fns")
metadata/_custom_type_script = "uid://w1ls2sl6uh03"

[node name="Hardcover_book" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = SubResource("ArrayMesh_vdvv5")
skeleton = NodePath("")

[node name="XRToolsGrabPointHand" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0.075, 0)
script = ExtResource("2_jho0q")
metadata/_custom_type_script = "uid://cg3fsmle8m3h8"

[node name="XRToolsGrabPointHand2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.075, 0)
script = ExtResource("2_jho0q")
hand = 1
metadata/_custom_type_script = "uid://cg3fsmle8m3h8"

[node name="label_background_mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
visible = false
mesh = SubResource("PlaneMesh_jho0q")

[node name="label_title" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.25, 0.105, -0.35)
visible = false
pixel_size = 0.001
modulate = Color(0.054902, 0.054902, 0.054902, 1)
text = "Title"
font_size = 40
outline_size = 0
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 2
width = 400.0

[node name="label_title_text" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.25, 0.105, -0.3)
visible = false
pixel_size = 0.001
modulate = Color(0.0562916, 0.0562916, 0.0562916, 1)
text = "My Default Book Title THIS IS A REALLY LONG BIT"
outline_size = 0
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 2
width = 350.0

[node name="label_summary" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.25, 0.105, -0.15)
visible = false
pixel_size = 0.001
modulate = Color(0.054902, 0.054902, 0.054902, 1)
text = "Summary"
font_size = 40
outline_size = 0
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 2
width = 400.0

[node name="label_summary_text" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.25, 0.105, -0.095)
visible = false
pixel_size = 0.001
modulate = Color(0.054902, 0.054902, 0.054902, 1)
text = "This is my example paragraph summary. This book is not yet finished, I'm just typing this to get an accurate gauge on how large this section should be and what my word limit is. It seems as if it's decently long. End now."
outline_size = 0
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 2

[node name="label_price" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.25, 0.105, 0.26)
visible = false
pixel_size = 0.001
modulate = Color(0.054902, 0.054902, 0.054902, 1)
text = "Price :"
font_size = 50
outline_size = 0
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 2
width = 400.0

[node name="label_price_text" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.08, 0.105, 0.26)
visible = false
pixel_size = 0.001
modulate = Color(0.054902, 0.054902, 0.054902, 1)
text = "$12345.67"
font_size = 50
outline_size = 0
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 2
width = 400.0

[node name="label_cover" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.06, 0)
pixel_size = 0.001
text = "My Default Title"
autowrap_mode = 2
width = 200.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.005, 0.025, 0)
shape = SubResource("BoxShape3D_jho0q")
